--- a/style.css
+++ b/style.css
@@ -18,6 +18,52 @@ body {
     font-size: 14px;
     z-index: 1;
   }
+
+  #laptopPrompt {
+    position: fixed;
+    top: 66%;
+    left: 50%;
+    transform: translate(-50%, 20px);
+    width: auto;
+    text-align: center;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 28px;
+    background-color: rgba(0,0,0,0.6);
+    padding: 10px 20px;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 1s ease, transform 1s ease;
+    pointer-events: none;
+  }
+  #laptopPrompt.active {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+
+  #exitLaptopButton {
+    position: fixed;
+    top: 7.5vh;
+    left: 50%;
+    transform: translate(-50%, 20px);
+    width: auto;
+    text-align: center;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 28px;
+    background-color: rgba(0,0,0,0.6);
+    padding: 10px 20px;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 1s ease, transform 1s ease;
+    pointer-events: auto;
+  }
+  #exitLaptopButton.active {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
   
   #startOverlay,
   #pauseOverlay {
